@@ -13,7 +13,6 @@
  - windows agent crash
  - Action not running when trigger changes from TRUE -> UNKNOWN -> FALSE: http://www.zabbix.com/forum/showthread.php?t=2671
  - problems adding new map links: http://www.zabbix.com/forum/showthread.php?t=2604
- - fix max,min, avg, etc for history_uint
 
  - item key popup, trigger expression builder
  - remember different default values in different forms
